# React-native-stockfish

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-stockfish.podspec  tsconfig.json
android/: build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
cpp/: react-native-stockfish.cpp
cpp/Stockfish/: main.h  uci.cpp  uci.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/StockfishExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/StockfishExample.xcodeproj/: project.pbxproj
example/ios/StockfishExample.xcodeproj/xcshareddata/xcschemes/: StockfishExample.xcscheme
example/src/: App.tsx
ios/: Stockfish.h  Stockfish.mm  Stockfish.swift  cpp_bridge.h  cpp_bridge.mm
react-native-stockfish/react-native-stockfish/: README.md  package-lock.json
react-native-stockfish/react-native-stockfish/android/: CMakeLists.txt
react-native-stockfish/react-native-stockfish/android/src/main/java/com/stockfish/: StockfishPackage.java
react-native-stockfish/react-native-stockfish/cpp/: react-native-stockfish.h
react-native-stockfish/react-native-stockfish/cpp/Stockfish/: main.cpp  uci.cpp  uci.h
react-native-stockfish/react-native-stockfish/example/: package.json
react-native-stockfish/react-native-stockfish/example/android/app/: build.gradle
react-native-stockfish/react-native-stockfish/src/: index.tsx
src/: index.tsx
(+8 files in other folders)
